# m68k

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  LICENSE  main.cpp  registers.h  types.h
.devcontainer/: devcontainer.json
src/: main.cpp
src/BUS/: memoryinterface.h
src/BUS/bus/: CMakeLists.txt
src/BUS/bus/include/bus/: bus.h
src/BUS/bus/src/: bus.cpp
src/BUS/bus/tests/: CMakeLists.txt  bus_tests.cpp
src/BUS/bus/tests/mock/: mock_bus_device.h
src/BUS/busdevice/: CMakeLists.txt
src/BUS/busdevice/include/: ibusdevice.h
src/BUS/memoryinterface/: CMakeLists.txt
src/BUS/memoryinterface/include/: memoryinterface.h
src/devices/CPU/: CMakeLists.txt
src/devices/CPU/include/cpu/: cpu.h
src/devices/CPU/include/cpu/internal/: instruction_decode_error.h  instruction_decoder.h  instruction_params.h  instruction_type_decoder.h  opcodes_masks.h  registers.h
src/devices/CPU/include/cpu/internal/bus_helper/: bus_helper.h
src/devices/CPU/include/cpu/internal/instruction_decoder/: decode_result.h  instruction_decode_error.h  instruction_decoder.h  instruction_type_decoder.h  opcodes_masks.h
src/devices/CPU/include/cpu/internal/instruction_decoder/decoders/: ABCD_decoder.h  ADDA_decoder.h  ADDI_decoder.h  ADDQ_decoder.h  ADDX_decoder.h  ADD_decoder.h  ANDI_decoder.h  ANDI_to_CCR_decoder.h  ANDI_to_SR_decoder.h  AND_decoder.h  ASL_memory_decoder.h  ASL_register_decoder.h  ASR_memory_decoder.h  ASR_register_decoder.h  Bcc_decoder.h  ORI_decoder.h  ORI_to_CCR_decoder.h  ORI_to_SR_decoder.h  base_decoder.h  decoders_helpers.h  tst_decoder.h
src/devices/CPU/include/cpu/internal/instruction_executor/: base_executor.h  instruction_execute_error.h
src/devices/CPU/include/cpu/internal/instruction_executor/executors/: TST_executor.h
src/devices/CPU/include/cpu/internal/instructions/: instruction.h  instruction_base.h  instruction_factory.h  instruction_params.h  tst_instruction.h
src/devices/CPU/include/cpu/internal/instructions/data/: ABCD_instruction_data.h  ADDA_instruction_data.h  ADDI_instruction_data.h  ADDQ_instruction_data.h  ADDX_instruction_data.h  ADD_instruction_data.h  ANDI_instruction_data.h  ANDI_to_CCR_instruction_data.h  ANDI_to_SR_instruction_data.h  AND_instruction_data.h  ASL_memory_instruction_data.h  ASL_register_instruction_data.h  ASR_memory_instruction_data.h  ASR_register_instruction_data.h  ASd_instruction_data.h  BCHG_instruction_data.h  BCLR_instruction_data.h  BRA_instruction_data.h  BSET_instruction_data.h  BSR_instruction_data.h  BTST_instruction_data.h  Bcc_instruction_data.h  CHK_instruction_data.h  CLR_instruction_data.h  CMPA_instruction_data.h  CMPI_instruction_data.h  CMPM_instruction_data.h  CMP_instruction_data.h  DBcc_instruction_data.h  DIVS_instruction_data.h  DIVU_instruction_data.h  EORI_instruction_data.h  EORI_to_CCR_instruction_data.h  EORI_to_SR_instruction_data.h  EOR_instruction_data.h  EXG_instruction_data.h  EXT_instruction_data.h  JMP_instruction_data.h  JSR_instruction_data.h  LEA_instruction_data.h  (+41 more)
src/devices/CPU/src/: cpu.cpp  instruction.cpp  instruction_decoder.cpp  instruction_factory.cpp  instruction_type_decoder.cpp
src/devices/CPU/src/decoders/: ABCD_decoder.cpp  ADDA_decoder.cpp  ADDI_decoder.cpp  ADDQ_decoder.cpp  ADDX_decoder.cpp  ADD_decoder.cpp  ANDI_decoder.cpp  ANDI_to_CCR_decoder.cpp  ANDI_to_SR_decoder.cpp  AND_decoder.cpp  ASL_memory_decoder.cpp  ASL_register_decoder.cpp  ASR_memory_decoder.cpp  ASR_register_decoder.cpp  Bcc_decoder.cpp  ORI_decoder.cpp  ORI_to_CCR_decoder.cpp  ORI_to_SR_decoder.cpp  TST_decoder.cpp  decoder_helpers.cpp  decoders_helpers.cpp  tst_decoder.cpp
src/devices/CPU/src/executors/: TST_executor.cpp
src/devices/CPU/src/instructions/: tst_instruction.cpp
src/devices/CPU/tests/: CMakeLists.txt  bus_helpers_tests.cpp  decoders_helpers_tests.cpp
src/devices/CPU/tests/mock/: mock_bus.h
src/devices/ROM/: CMakeLists.txt
src/devices/ROM/include/rom/: filerom.h
src/devices/ROM/src/: filerom.cpp
src/devices/ROM/tests/: CMakeLists.txt  romfile_device_tests.cpp
